Add validator and i18n
